--- a/sastaKharido/sastakharido/package.json
+++ b/sastaKharido/sastakharido/package.json
@@ -10,6 +10,7 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "mongoose": "^7.4.3",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
